--- a/template/profile.html
+++ b/template/profile.html
@@ -131,7 +131,7 @@
                             </div>
                             <div class="info-item" id="info-type">
                                 <span class="info-label">Membership Type:</span>
-                                <span class="info-value membership-type">Premium</span>
+                                <span class="info-value membership-type">{{ membership_type }}</span>
                             </div>
                             <div class="info-item" id="info-status">
                                 <span class="info-label">Status:</span>
