Updated /users and /pro render...

--- a/template/index.html
+++ b/template/index.html
@@ -171,7 +171,7 @@
             <p><i class="ri-close-circle-line unavailable-feature"></i> Personal Training</p>
           </div>
           <a href="#">
-            <button class="btn price__btn">Join Now</button>
+            <button class="btn price__btn">Pay Now</button>
           </a>
         </div>
 
@@ -186,7 +186,7 @@
             <p><i class="ri-close-circle-line unavailable-feature"></i> Personal Training</p>
           </div>
           <a href="#">
-            <button class="btn price__btn">Join Now</button>
+            <button class="btn price__btn">Pay Now</button>
           </a>
         </div>
 
@@ -203,7 +203,7 @@
             <p><i class="ri-checkbox-circle-line"></i> Personal Training</p>
           </div>
           <a href="#">
-            <button class="btn price__btn">Join Now</button>
+            <button class="btn price__btn">Pay Now</button>
           </a>
         </div>
       </div>
