--- a/template/select-payment-method.html
+++ b/template/select-payment-method.html
@@ -157,7 +157,7 @@
   <div class="container">
     <h2>Select Your Payment Method</h2>
     <div class="amount" id="amountDisplay">₹{{ amount }}</div>
-    <button class="btn-online" id="payOnlineBtn">Pay Online</button>
+    <button class="btn-online" id="payOnlineBtn" style="display: none;">Pay Online</button>
     <button class="btn-offline" id="payOfflineBtn">Pay Cash</button>
   </div>
 
