--- a/template/forgot_password.html
+++ b/template/forgot_password.html
@@ -317,7 +317,7 @@
             });
 
             const data = await res.json();
-            showSnackbar(data.message || "Unknown response", res.ok);
+            showSnackbar(data.message || data.detail || "Unknown response", res.ok);
 
             if (res.ok) {
                 setTimeout(() => window.location.href = "/signin", 2000);
