--- a/staticfile/offline.css
+++ b/staticfile/offline.css
@@ -277,7 +277,39 @@ button {
       }
 
 
-
+      #loader-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(17, 19, 23, 0.8); /* semi-transparent dark background */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        transition: opacity 0.3s ease;
+    }
+    
+    .spinner {
+        border: 8px solid #f3f3f3;
+        border-top: 8px solid #f0860d;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        animation: spin 1s linear infinite;
+    }
+    
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+    
+    #loader-overlay.hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+    
 
 /* Responsive Design */
 @media (max-width: 768px) {
