--- a/template/index.html
+++ b/template/index.html
@@ -163,7 +163,7 @@
         <div class="price__card">
           <div class="price__card__content">
             <h4>Basic Plan</h4>
-            <h3>₹900</h3>
+            <h3>₹900/month</h3>
             <p><i class="ri-checkbox-circle-line"></i> Gym Access</p>
             <p><i class="ri-checkbox-circle-line"></i> Basic Equipment</p>
             <!-- <p><i class="ri-checkbox-circle-line"></i> Locker Room</p> -->
@@ -178,7 +178,7 @@
         <div class="price__card">
           <div class="price__card__content">
             <h4>Premium Plan</h4>
-            <h3>₹1500</h3>
+            <h3>₹1500/month</h3>
             <p><i class="ri-checkbox-circle-line"></i> Gym Access</p>
             <p><i class="ri-checkbox-circle-line"></i> All Equipment</p>
             <p><i class="ri-checkbox-circle-line unavailable-feature"></i> Diet Consultation</p>
@@ -193,7 +193,7 @@
         <div class="price__card">
           <div class="price__card__content">
             <h4>Pro Plan</h4>
-            <h3>₹3500</h3>
+            <h3>₹3500/month</h3>
             <p><i class="ri-checkbox-circle-line"></i> Gym Access</p>
             <p><i class="ri-checkbox-circle-line"></i> Basic Equipment</p>
             <p><i class="ri-checkbox-circle-line"></i> Unlimited Personal Training</p>
