--- a/template/index.html
+++ b/template/index.html
@@ -162,8 +162,8 @@
       <div class="price__grid">
         <div class="price__card">
           <div class="price__card__content">
-            <h4>Basic Plan</h4>
-            <h3>₹900/month</h3>
+            <h4>Basic Plan/month</h4>
+            <h3>₹900</h3>
             <p><i class="ri-checkbox-circle-line"></i> Gym Access</p>
             <p><i class="ri-checkbox-circle-line"></i> Basic Equipment</p>
             <!-- <p><i class="ri-checkbox-circle-line"></i> Locker Room</p> -->
@@ -177,8 +177,8 @@
 
         <div class="price__card">
           <div class="price__card__content">
-            <h4>Premium Plan</h4>
-            <h3>₹1500/month</h3>
+            <h4>Premium Plan/month</h4>
+            <h3>₹1500</h3>
             <p><i class="ri-checkbox-circle-line"></i> Gym Access</p>
             <p><i class="ri-checkbox-circle-line"></i> All Equipment</p>
             <p><i class="ri-checkbox-circle-line unavailable-feature"></i> Diet Consultation</p>
@@ -192,8 +192,8 @@
 
         <div class="price__card">
           <div class="price__card__content">
-            <h4>Pro Plan</h4>
-            <h3>₹3500/month</h3>
+            <h4>Pro Plan/month</h4>
+            <h3>₹3500</h3>
             <p><i class="ri-checkbox-circle-line"></i> Gym Access</p>
             <p><i class="ri-checkbox-circle-line"></i> Basic Equipment</p>
             <p><i class="ri-checkbox-circle-line"></i> Unlimited Personal Training</p>
