--- a/template/index.html
+++ b/template/index.html
@@ -234,7 +234,7 @@
        <div class="footer__col"> 
         <h4>Contact with us</h4>
         <a href="tel:+918008984440"><i class="ri-phone-fill"></i> +91 8008984440</a>
-        <a href="mailto:johnson.hyd@gmail.com"><i class="ri-mail-fill"></i>johnson.hyd@gmail.com</a>  
+        <a href="mailto:johnson.hyd@gmail.com"><i class="ri-mail-fill"></i>thegymbyjohnson@gmail.com</a>  
       </div>
       
     </footer>
